--- a/async-race-api/package.json
+++ b/async-race-api/package.json
@@ -11,5 +11,10 @@
   "devDependencies": {
     "json-server": "^0.16.3",
     "prettier": "2.8.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   }
 }
