--- a/async-race-api/package.json
+++ b/async-race-api/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.22"
   }
 }
