feat: add post method

--- a/async-race-api/package.json
+++ b/async-race-api/package.json
@@ -4,7 +4,7 @@
   "description": "Fun with promises",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "mikhama",
   "license": "MIT",
